Mitglied/Beteiligt DTO fix